--- a/application/views/scripts/document/page/edit.phtml
+++ b/application/views/scripts/document/page/edit.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->title = $this->translate("Page details");
+$this->title = $this->translate("Edit page");
 $this->headTitle($this->title);
 ?>
 Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
