--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -7,6 +7,7 @@
     <th><?php echo $this->translate("Title"); ?></th>
     <th style="width: 70px;"><?php echo $this->translate("Page from"); ?></th>
     <th style="width: 70px;"><?php echo $this->translate("Page to"); ?></th>
+    <th style="width: 100px;"><?php echo $this->translate("Source"); ?></th>
     <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
   <?php $i = 0; ?>
@@ -14,11 +15,12 @@
   <?php foreach($this->paginator as $fragment): ?>
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
     <td><a href="<?php echo $fragment->getDirectLink(); ?>"><?php echo $fragment->getTitle(); ?></a></td>
-    <td><?php echo $fragment->getSource()->getPageFrom()->getPageNumber(); ?></td>
-    <td><?php echo $fragment->getSource()->getPageTo()->getPageNumber(); ?></td>
+    <td><?php echo $fragment->getPlag()->getPageFrom()->getPageNumber(); ?></td>
+    <td><?php echo $fragment->getPlag()->getPageTo()->getPageNumber(); ?></td>
+    <td><a href="<?php echo "/document_page/list/id/" . $fragment->getSource()->getPageFrom()->getDocument()->getId(); ?>"><?php echo $fragment->getSource()->getPageFrom()->getDocument()->getTitle(); ?></a></td>
     <td>
       <a href="<?php echo "/document_fragment/edit/id/" . $fragment->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/pencil.png'); ?>" title="<?php echo $this->translate("Edit fragment"); ?>" /></a>
-      <a href="<?php echo "/document_fragment/remove/id/" . $fragment->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("Remove fragment."); ?>" /></a>
+      <a href="<?php echo "/document_fragment/delete/id/" . $fragment->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("Remove fragment."); ?>" /></a>
     </td>
   </tr>
   <?php endforeach; ?>
