--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1362,6 +1362,10 @@ ins {
   .pagewrap {
   padding: 0 10px 10px 10px;
   }
+  
+  .src-wrapper {
+    margin-top: 20px;
+  }
 }
 
 @media only screen and (min-width: 480px) {
