--- a/application/views/scripts/partials/comments.phtml
+++ b/application/views/scripts/partials/comments.phtml
@@ -7,8 +7,8 @@
   <div class="write-comment-box">
     <input type="text" name="text" placeholder="Write a comment" class="comment-field" />
     <input type="hidden" name="sourceId" value="<?php echo $this->sourceId; ?>" class="comment-field" />
-    <div class="smork-btn light comment-icon">
-      <a href="#" class="write-comment"><span>Write comment</span></a>
+    <div class="smork-btn light">
+      <a href="#" class="write-comment"><span class="comment-icon">Write comment</span></a>
     </div>
   </div>
 </div>
