adds missing icons on buttons again

--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -25,6 +25,6 @@
 </table> 
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<div class="smork-btn create-case-icon">
-  <a href="/case/create"><span><?php echo $this->translate("Create a new case"); ?></span></a>
+<div class="smork-btn">
+  <a href="/case/create"><span class="create-case-icon"><?php echo $this->translate("Create a new case"); ?></span></a>
 </div>
