--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -28,6 +28,6 @@
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<div class="smork-btn upload-icon">
-  <a href="/document_fragment/create"><span><?php echo $this->translate("Create a fragment"); ?></span></a>
+<div class="smork-btn">
+  <a href="/document_fragment/create"><span class="upload-icon"><?php echo $this->translate("Create a fragment"); ?></span></a>
 </div>
