--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -75,6 +75,6 @@
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
-<div class="smork-btn upload-icon">
-  <a href="/file/upload"><span><?php echo $this->translate("Upload a file"); ?></span></a>
+<div class="smork-btn">
+  <a href="/file/upload"><span class="upload-icon"><?php echo $this->translate("Upload a file"); ?></span></a>
 </div>
