More responsive toolbar

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -22,7 +22,7 @@
     <header role="toolbar">
       <div class="content clearfix">
         <?php if(Zend_Auth::getInstance()->hasIdentity()): ?>
-          <div class="case-settings-box">
+          <div class="case-settings-box clearfix">
             <?php
             $currentLabel = '';
             $currentValue = null;
