--- a/application/views/scripts/document/fragment/modify.phtml
+++ b/application/views/scripts/document/fragment/modify.phtml
@@ -1,3 +1,6 @@
 <?php $this->headTitle($this->translate($this->title)); ?>
 
-<?php echo $this->modifyForm;	?>
+<?php
+echo $this->modifyForm;
+?>
+
