makes header image wider and higher, adds beta patch as own element

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -63,6 +63,7 @@
     </header>
     <div id="page" class="pagewrap">
       <header role="banner" id="header" class="clearfix">
+        <div id="beta-patch"></div>
         <h1 class="ir">Unplagged - The Plagiarism Detection Cockpit</h1>
         <?php
           $controller = Zend_Controller_Front::getInstance()->getRequest()->getControllerName();
