removes aktuelles und kontroverses from home page sidebar, adds latest cases to sidebar

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -51,7 +51,7 @@ $cases = $results;
         echo $this->partial('partials/sidebars/document_tools.phtml', array("documentId" => $this->layout()->versionableId));
         break;
       default:
-        echo $this->partial('partials/sidebars/default.phtml');
+        echo $this->partial('partials/sidebars/default.phtml', array("cases" => $this->layout()->cases));
     }
   } //echo $partial;
   ?>
