--- a/application/layouts/scripts/partials/sidebars/default.phtml
+++ b/application/layouts/scripts/partials/sidebars/default.phtml
@@ -1,15 +1,14 @@
 <nav id="right-nav">
-  <h4>Aktuelles und Kontroverses</h4>
+  <h4><?php echo $this->translate("Latest cases"); ?></h4>
   <ul>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
-  </ul>
-  <br />
-  <h4>Berichte und Mitteilungen</h4>
-  <ul>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
-    <li><a href="#">News 1<span class="count">3</span></a></li>
+    <?php foreach ($this->cases as $case): ?>
+    <li>
+      <a href="#"><?php echo $case->getPublishableName(); ?> <span class="count"><?php echo $case->getPlagiarismPercentage(); ?> %</span>
+        <div class="barcode">
+        <img src="/images/plag_barcode.png" alt="barcode"/>
+        </div>
+      </a>
+    </li>
+    <?php endforeach; ?>
   </ul>
 </nav>
