--- a/application/views/scripts/document/fragment/list.phtml
+++ b/application/views/scripts/document/fragment/list.phtml
@@ -18,10 +18,7 @@
     <td><?php echo $fragment->getPlag()->getPageFrom()->getPageNumber(); ?></td>
     <td><?php echo $fragment->getPlag()->getPageTo()->getPageNumber(); ?></td>
     <td><a href="<?php echo "/document_page/list/id/" . $fragment->getSource()->getPageFrom()->getDocument()->getId(); ?>"><?php echo $fragment->getSource()->getPageFrom()->getDocument()->getTitle(); ?></a></td>
-    <td>
-      <a href="<?php echo "/document_fragment/edit/id/" . $fragment->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/pencil.png'); ?>" title="<?php echo $this->translate("Edit fragment"); ?>" /></a>
-      <a href="<?php echo "/document_fragment/delete/id/" . $fragment->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("Remove fragment."); ?>" /></a>
-    </td>
+    <td><?php echo $this->partial('partials/action-dropdown.phtml', array('actions' => $fragment->actions)); ?></td>
   </tr>
   <?php endforeach; ?>
   <?php endif; ?>
