--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -687,6 +687,7 @@ table.default td {
   text-align: left;
   padding: 6px 5px 6px 15px;
   font-weight: normal;
+  vertical-align: middle;
 }
 
 table.default tr.even {
