--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -1,27 +1,32 @@
 <?php
-    $this->title = $this->translate("List of cases");
-    $this->headTitle($this->title);
+$this->title = $this->translate("List of cases");
+$this->headTitle($this->title);
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
-  <tr>
-    <th><?php echo $this->translate("Name"); ?></th>
-    <th style="width: 110px;"><?php echo $this->translate("Alias"); ?></th>
-    <th style="width: 100px;"><?php echo $this->translate("Abbreviation"); ?></th>
-    <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
-  </tr>
-  <?php 
-  $i = 0;
-  ?>
-  <?php if($this->paginator): ?>
-  <?php foreach ($this->paginator as $case): ?>
-  <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
-    <td><?php echo $case->getName(); ?></td>
-    <td><?php echo $case->getAbbreviation(); ?></td>
-    <td><?php echo $case->getAlias(); ?></td>
-    <td><a href="<?php echo "/case/edit/id/" . $case->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/pencil.png'); ?>" title="<?php echo $this->translate("Edit case"); ?>" /></a></td>
-  </tr>
-  <?php endforeach; ?>
-  <?php endif; ?>
+  <thead>
+    <tr>
+      <th><?php echo $this->translate("Name"); ?></th>
+      <th style="width: 110px;"><?php echo $this->translate("Alias"); ?></th>
+      <th style="width: 100px;"><?php echo $this->translate("Abbreviation"); ?></th>
+      <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php if(count($this->paginator)): ?>
+      <?php foreach($this->paginator as $case): ?>
+        <tr>
+          <td data-label="<?php echo $this->translate("Name"); ?>"><?php echo $case->getName(); ?></td>
+          <td data-label="<?php echo $this->translate("Alias"); ?>"><?php echo $case->getAlias(); ?></td>
+          <td data-label="<?php echo $this->translate("Abbreviation"); ?>"><?php echo $case->getAbbreviation(); ?></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$case->actions)); ?></td>
+        </tr>
+      <?php endforeach; ?>
+    <?php else: ?>
+      <tr>
+        <td colspan="4" class="no-label"><?php echo $this->translate("No cases found."); ?></td>
+      </tr>
+    <?php endif; ?>
+  </tbody>
 </table> 
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
 
