--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -1,21 +1,27 @@
 <?php
-    $this->title = $this->translate("List of documents");
-    $this->headTitle($this->title);
+$this->title = $this->translate("List of documents");
+$this->headTitle($this->title);
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
-  <tr>
-    <th><?php echo $this->translate("Title"); ?></th>
-    <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
-  </tr>
-  <?php 
-  $i = 0;
-  if($this->paginator):?>
-  <?php foreach($this->paginator as $document): ?>
-  <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
-    <td><a href="/document_page/list/id/<?php echo $document->getId(); ?>"><?php echo $document->getTitle(); ?></a></td>
-    <td><?php echo $this->partial('partials/action-dropdown.phtml', array('actions' => $document->actions)); ?></td>
-  </tr>
-  <?php endforeach; ?>
-  <?php endif; ?>
+  <thead>
+    <tr>
+      <th><?php echo $this->translate("Title"); ?></th>
+      <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
+    </tr>
+  </thead>
+  <tbody>
+    <?php if(count($this->paginator)): ?>
+      <?php foreach($this->paginator as $document): ?>
+        <tr>
+          <td data-label="<?php echo $this->translate("Title"); ?>"><a href="/document_page/list/id/<?php echo $document->getId(); ?>"><?php echo $document->getTitle(); ?></a></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$document->actions)); ?></td>
+        </tr>
+      <?php endforeach; ?>
+    <?php else: ?>
+      <tr>
+        <td colspan="2" class="no-label"><?php echo $this->translate("No documents found."); ?></td>
+      </tr>
+    <?php endif; ?>
+  </tbody>
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
