--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -6,25 +6,22 @@
       <th style="width: 110px;"><?php echo $this->translate("Uploaded"); ?></th>
       <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
     </tr>
-  <thead>
+  </thead>
   <tbody>
-    <?php $i = 0; ?>
-    <?php foreach($this->paginator as $file): ?>
-      <tr <?php echo ($i++ % 2 == 0) ? 'class="even"' : ""; ?>>
-        <td>
-          <img class="icon" src="<?php echo $this->baseUrl('images/icons/' . Unplagged_Helper::getFileIconByExtension($file->getExtension())); ?>" />
-        </td>
-        <td>
-          <a <?php if($file->isImage()){
-      echo 'class="picture"';
-    } ?> href="<?php echo $this->baseUrl('/image/show/id/' . $file->getId()); ?>">          
-  <?php echo $file->getFilename(); ?>
-          </a>
-        </td>
-        <td><?php echo $file->getCreated()->format('Y-m-d'); ?></td>
-        <td><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$file->actions)); ?></td>
+    <?php if(count($this->paginator)): ?>
+      <?php foreach($this->paginator as $file): ?>
+        <tr>
+          <td data-label="<?php echo $this->translate("Icon"); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/' . Unplagged_Helper::getFileIconByExtension($file->getExtension())); ?>" /></td>
+          <td data-label="<?php echo $this->translate("Filename"); ?>"><a <?php echo $file->isImage() ? 'class="picture"' : ""; ?> href="<?php echo $this->baseUrl('/image/show/id/' . $file->getId()); ?>"><?php echo $file->getFilename(); ?></a></td>
+          <td data-label="<?php echo $this->translate("Uploaded"); ?>"><?php echo $file->getCreated()->format('Y-m-d'); ?></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$file->actions)); ?></td>
+        </tr>
+      <?php endforeach; ?>
+    <?php else: ?>
+      <tr>
+        <td colspan="4" class="no-label"><?php echo $this->translate("No files found."); ?></td>
       </tr>
-<?php endforeach; ?>
+    <?php endif; ?>
   </tbody>
 </table>
 <?php echo $this->paginationControl($this->paginator, 'Sliding', 'pagination-control.phtml'); ?>
