makes changelog more generic and working again, moves simtext related files to correct directories, adds fragment creation option through marking text

--- a/application/layouts/scripts/partials/sidebars/page_tools.phtml
+++ b/application/layouts/scripts/partials/sidebars/page_tools.phtml
@@ -17,7 +17,7 @@
       </a>
     </li>
     <li>
-      <a href="<?php echo "/document_page/edit/id/" . $this->pageId; ?>">
+      <a href="#" class="create-fragment">
         <img class="icon" src="<?php echo $this->baseUrl('images/icons/textfield_add.png'); ?>" title="<?php echo $this->translate("Create fragment"); ?>" /><span><?php echo $this->translate("Create fragment"); ?></span>
       </a>
     </li>
